k8s/comment-db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-db
  template:
    metadata:
      labels:
        app: comment-db
    spec:
      containers:
      - name: comment-db
        image: postgres:latest
        ports:
        - containerPort: 3021
---
apiVersion: v1
kind: Service
metadata:
  name: comment-db
spec:
  selector:
    app: comment-db
  ports:
    - protocol: TCP
      port: 3021
      targetPort: 3021
  type: ClusterIP
