k8s/comment-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-service
  template:
    metadata:
      labels:
        app: comment-service
    spec:
      containers:
      - name: comment-service
        image: ghcr.io/ds-disx/comment-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3020
---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  selector:
    app: comment-service
  ports:
    - protocol: TCP
      port: 3020
      targetPort: 3020
  type: ClusterIP
