k8s/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disx-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: disx-db
  template:
    metadata:
      labels:
        app: disx-db
    spec:
      containers:
      - name: disx-db
        image: postgres:latest
        ports:
        - containerPort: 3011
---
apiVersion: v1
kind: Service
metadata:
  name: disx-db
spec:
  selector:
    app: disx-db
  ports:
    - protocol: TCP
      port: 3011
      targetPort: 3011
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disx-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: disx-service
  template:
    metadata:
      labels:
        app: disx-service
    spec:
      containers:
      - name: disx-service
        image: ghcr.io/ds-disx/disx-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3010
---
apiVersion: v1
kind: Service
metadata:
  name: disx-service
spec:
  selector:
    app: disx-service
  ports:
    - protocol: TCP
      port: 3010
      targetPort: 3010
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-db
  template:
    metadata:
      labels:
        app: comment-db
    spec:
      containers:
      - name: comment-db
        image: postgres:latest
        ports:
        - containerPort: 3021
---
apiVersion: v1
kind: Service
metadata:
  name: comment-db
spec:
  selector:
    app: comment-db
  ports:
    - protocol: TCP
      port: 3021
      targetPort: 3021
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-service
  template:
    metadata:
      labels:
        app: comment-service
    spec:
      containers:
      - name: comment-service
        image: ghcr.io/ds-disx/comment-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3020
---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  selector:
    app: comment-service
  ports:
    - protocol: TCP
      port: 3020
      targetPort: 3020
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/ds-disx/disx-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/
          readOnly: true
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
