k8s/disx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disx-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: disx-service
  template:
    metadata:
      labels:
        app: disx-service
    spec:
      containers:
      - name: disx-service
        image: ghcr.io/ds-disx/disx-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3010
---
apiVersion: v1
kind: Service
metadata:
  name: disx-service
spec:
  selector:
    app: disx-service
  ports:
    - protocol: TCP
      port: 3010
      targetPort: 3010
  type: ClusterIP
