k8s/keycloak-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - args: ['start', '--http-port=3030']
          image: quay.io/keycloak/keycloak:24.0.1
          name: keycloak
          ports:
            - name: http
              containerPort: 3030
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - port: 3030
      targetPort: 3030
      protocol: TCP
  selector:
    app: keycloak
  type: ClusterIP
