k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - codeds.nl
    - auth.codeds.nl
    secretName: tls-secret
  rules:
  - host: codeds.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /grafana(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
  - host: auth.codeds.nl
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 3030
